--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,8 @@ jobs:
         #uses: game-ci/unity-return-license@v2
         #if: always()
       # Upload to Itch
-      - uses: josephbmanley/butler-publish-itchio-action@master
+      - name: Upload WebGL build to Itch.io
+        uses: josephbmanley/butler-publish-itchio-action@master
         env:
           BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
           CHANNEL: html5
