--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     # This stops builds that are in-progress once a new commit comes in
     concurrency: 
-      group: unity-build
+      group: unity-build-${{ matrix.targetPlatform }}
       cancel-in-progress: false
     strategy:
       fail-fast: false
