--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           targetPlatform: WebGL
       - name: Upload WebGL build to Itch.io
-        if: ${{ matrix.targetPlatform == WebGL }}
+        if: ${{ matrix.targetPlatform == 'WebGL' }}
         uses: josephbmanley/butler-publish-itchio-action@master
         env:
           BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
