--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,10 @@ jobs:
           UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
         with:
           targetPlatform: WebGL
+      - uses: actions/upload-artifact@v4
+        with:
+           name: ${{ matrix.targetPlatform }}
+           path: build
       - name: Upload WebGL build to Itch.io
         if: ${{ matrix.targetPlatform == 'WebGL' }}
         uses: josephbmanley/butler-publish-itchio-action@master
@@ -51,9 +55,6 @@ jobs:
           ITCH_GAME: robotics-simulator
           ITCH_USER: skolodny
           PACKAGE: build/WebGL
-      - uses: actions/upload-artifact@v4
-        with:
-           name: Build
-           path: build
+
 
            
