--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,13 +74,13 @@ jobs:
         body_path: CHANGELOG.md
       env:
         GITHUB_TOKEN: ${{ github.token }}
-    - name: upload Mac artifact
+    - name: upload StandaloneOSX artifact
       uses: actions/upload-release-asset@v2
       env:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build
+        asset_path: ./build/StandaloneOSX.zip
         asset_name: StandaloneOSX.zip
         asset_content_type: application/zip
     - name: upload StandaloneWindows64 artifact
@@ -89,7 +89,7 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build
+        asset_path: ./build/StandaloneWindows64.zip
         asset_name: StandaloneWindows64.zip
         asset_content_type: application/zip
     - name: upload WebGL artifact
@@ -98,7 +98,7 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build
+        asset_path: ./build/WebGL.zip
         asset_name: WebGL.zip
         asset_content_type: application/zip
 
