--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
       # Cache
       - uses: actions/cache@v4
         with:
-          path: Library
-          key: Library
+          path: ${{ matrix.targetPlatform }}
+          key: ${{ matrix.targetPlatform }}
       # Build
       - name: Build for ${{ matrix.targetPlatform }}
         uses: game-ci/unity-builder@v4
