--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     # This stops builds that are in-progress once a new commit comes in
     concurrency: 
       group: unity-build-${{ matrix.targetPlatform }}
-      cancel-in-progress: true
+      cancel-in-progress: false
     strategy:
       fail-fast: false
       matrix:
@@ -28,7 +28,7 @@ jobs:
       # Cache
       - uses: actions/cache@v4
         with:
-          path: ${{ matrix.targetPlatform }}
+          path: Library
           key: ${{ matrix.targetPlatform }}
       # Build
       - name: Build for ${{ matrix.targetPlatform }}
