--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,7 @@ jobs:
   generateRelease:
     name: Generate Release
     runs-on: ubuntu-latest
+    permissions: write-all
     needs: buildForAllSupportedPlatforms
     steps:
     - name: version
